--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="col-6 mx-auto">
                     <div class="card">
-                        
+                        test
                     </div>
                 </div>
             </div>
